# tusk

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  clippy.toml  eslint.config.js  package-lock.json  package.json  rustfmt.toml  svelte.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.claude/commands/: speckit.specify.md  tusk.commit.md
.claude/skills/research/: README.md  SKILL.md
.claude/skills/research/references/: repo-cloning-pattern.md  verification-patterns.md
.claude/skills/svelte-components/: SKILL.md
.claude/skills/svelte-components/references/: component-libraries.md  form-patterns.md  web-components.md
.claude/skills/svelte-deployment/: SKILL.md
.claude/skills/svelte-deployment/references/: cloudflare-gotchas.md  library-authoring.md  pwa-setup.md
.claude/skills/svelte-runes/: SKILL.md
.claude/skills/svelte-runes/examples/: bindable-props.svelte  effect-vs-derived.svelte
.claude/skills/svelte-runes/references/: attachments.md  common-mistakes.md  migration-gotchas.md  reactivity-patterns.md
.claude/skills/sveltekit-data-flow/: SKILL.md
.claude/skills/sveltekit-data-flow/references/: error-redirect-handling.md  form-actions.md  load-functions.md  serialization.md
.claude/skills/sveltekit-remote-functions/: SKILL.md
.claude/skills/sveltekit-remote-functions/references/: remote-functions.md
.claude/skills/sveltekit-structure/: SKILL.md
.claude/skills/sveltekit-structure/references/: error-handling.md  layout-patterns.md  svelte-boundary.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
assets/: tusk.exe.manifest
assets/icons/: tusk.icns
crates/tusk/: Cargo.toml  build.rs
crates/tusk/src/: app.rs  app_menus.rs  main.rs
crates/tusk_core/: Cargo.toml
crates/tusk_core/src/: error.rs  lib.rs  logging.rs  state.rs  verification_tests.rs
crates/tusk_core/src/models/: connection.rs  history.rs  mod.rs  query.rs  schema.rs
crates/tusk_core/src/services/: connection.rs  credentials.rs  mod.rs  query.rs  schema.rs  storage.rs
crates/tusk_ui/: Cargo.toml
crates/tusk_ui/src/: application_menu.rs  button.rs  confirm_dialog.rs  connection_dialog.rs  context_menu.rs  dock.rs  error_panel.rs  icon.rs  icons.rs  key_bindings.rs  keyboard_shortcuts.rs  layout.rs  lib.rs  modal.rs  pane.rs  panel.rs  popover_menu.rs  query_editor.rs  resizer.rs  select.rs  spinner.rs  status_bar.rs  text_input.rs  theme.rs  toast.rs  tooltip.rs  tree.rs  workspace.rs
crates/tusk_ui/src/panels/: messages.rs  mod.rs  results.rs  schema_browser.rs
docs/: design.md
docs/features/: 00-feature-index.md  01-project-initialization.md  02-backend-architecture.md  03-frontend-architecture.md  04-ipc-layer.md  05-local-storage.md  06-settings-theming-credentials.md  07-connection-management.md  08-ssl-ssh-security.md  09-connection-ui.md  10-schema-introspection.md  11-query-execution.md  12-monaco-editor.md  13-tabs-history.md  14-results-grid.md  15-export-copy.md  16-schema-browser.md  17-table-data-viewer.md  18-inline-editing.md  19-query-plan-visualization.md  20-admin-dashboard.md  21-maintenance-operations.md  22-role-management.md  23-extension-manager.md  24-import-wizard.md  25-backup-restore.md  26-er-diagram.md  27-platform-integration.md  28-error-handling.md  29-keyboard-shortcuts-performance.md
specs/001-project-init/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-project-init/checklists/: requirements.md
specs/001-project-init/contracts/: ipc-commands.md
specs/002-backend-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-backend-architecture/checklists/: requirements.md
specs/002-backend-architecture/contracts/: README.md  connection.md  credentials.md  error.md  ipc-commands.md  logging.md  query.md  state.md  storage.md
specs/003-frontend-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-frontend-architecture/checklists/: requirements.md
specs/003-frontend-architecture/contracts/: README.md  components.md  connection.ts  context-menu.md  dock.md  index.ts  keyboard.md  modal.md  pane.md  panel.md  resizer.md  tab.ts  tree.md  ui.ts  workspace.md
specs/004-service-integration/: data-model.md  keychain-popup-analysis.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-service-integration/checklists/: requirements.md
specs/004-service-integration/contracts/: error-handling.md  query-events.md  state-api.md
specs/005-local-storage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-local-storage/checklists/: requirements.md
specs/005-local-storage/contracts/: storage_api.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: app.rs  connection.rs  mod.rs  query.rs  storage.rs
src-tauri/src/models/: app.rs  connection.rs  error.rs  mod.rs  query.rs
src-tauri/src/services/: connection.rs  credentials.rs  dirs.rs  logging.rs  mod.rs  query.rs  ssh_tunnel.rs  storage.rs
src/lib/components/common/: Button.svelte  Icon.svelte
src/lib/components/dialogs/: ConfirmDialog.svelte
src/lib/components/shell/: Resizer.svelte  Shell.svelte  Sidebar.svelte  SidebarHeader.svelte  SidebarSearch.svelte  StatusBar.svelte  Tab.svelte  TabBar.svelte
src/lib/services/: index.ts
src/lib/stores/: connections.svelte.ts  index.ts  tabs.svelte.ts  theme.svelte.ts  ui.svelte.ts
src/lib/types/: connection.ts  index.ts  tab.ts  ui.ts
src/lib/utils/: index.ts  keyboard.ts  storage.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
