[package]
name = "tusk"
version = "0.1.0"
description = "A fast, free, native Postgres client"
authors = ["Tusk Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[lib]
name = "tusk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri v2
tauri = { version = "2.2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-mcp-bridge = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"

# PostgreSQL
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-chrono-0_4",
    "with-serde_json-1"
] }
deadpool-postgres = "0.14"

# Local storage
rusqlite = { version = "0.32", features = ["bundled"] }

# OS credentials
keyring = { version = "3.6", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service"
] }

# SSH tunneling
russh = "0.46"
russh-keys = "0.46"

# Type support
uuid = { version = "1.12", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# TLS
native-tls = "0.2"
postgres-native-tls = "0.5"

# Utilities
thiserror = "2.0"
anyhow = "1.0"
directories = "5"
async-trait = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = false
