[package]
name = "tusk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tusk - A fast, native PostgreSQL client built with GPUI"

[[bin]]
name = "tusk"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tusk_core.workspace = true
tusk_ui.workspace = true
