[package]
name = "tusk_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types and utilities for Tusk PostgreSQL client"

[dependencies]
thiserror.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

# Async runtime and PostgreSQL
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
tokio-util = "0.7"

# Local storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Credential storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
atty = "0.2"

# Optional GPUI integration for Global trait
gpui = { workspace = true, optional = true }

[features]
default = []
gpui = ["dep:gpui"]
