[package]
name = "tusk_ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UI components and theming for Tusk PostgreSQL client"

[dependencies]
gpui.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-text.workspace = true
core-graphics.workspace = true
