[package]
name = "tusk_ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "UI components and theming for Tusk PostgreSQL client"

[features]
default = ["persistence"]
persistence = ["tusk_core"]

[dependencies]
gpui.workspace = true
smallvec = { version = "1.11", features = ["union"] }
uuid = { version = "1.6", features = ["v4"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tusk_core = { path = "../tusk_core", optional = true }
tracing = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-text.workspace = true
core-graphics.workspace = true
